<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VOCsReader</string>
    <string name="language">zh-rCN</string>
    <string name="actMain_name">蓝牙串口助手</string>
    <string name="actMain_link_device_info_title">需要连接的设备：</string>å
    <string name="actMain_link_device_service_uuid">Service\'s UUID：</string>
    <string name="actMain_find_service_uuids">搜索UUID服务列表中&#8230;</string>
    <string name="actMain_not_find_service_uuids">未找到设备的UUID服务列表。</string>
    <string name="actMain_device_info">设备名称: %1$s\n地址码: %2$s\nClass of Device(CoD):%3$s\n信号强度: %4$s\n设备类型: %5$s\n绑定状态: %6$s\n</string>
    <string name="actMain_btn_pair">建立蓝牙配对</string>
    <string name="actMain_btn_comm">仪器连接</string>
    <string name="actMain_tv_hint_service_uuid_not_bond">请先建立蓝牙配对后才能显示。</string>
    <string name="actMain_tv_select_mode">请选择通信工作模式</string>
    <string name="actMain_msg_does_not_support_uuid_service">当前Android版本暂不支持</string>
    <string name="actMain_msg_bluetooth_Bonding">配对中，请稍候&#8230;</string>
    <string name="actMain_msg_device_connecting">正在连接设备&#8230;</string>
    <string name="actMain_msg_device_connect_fail">蓝牙SPP通信连接建立失败</string>
    <string name="actMain_msg_device_connect_succes">成功连接上设备</string>
    <string name="actMain_msg_bluetooth_Bond_Success">配对成功</string>
    <string name="actMain_msg_bluetooth_Bond_fail">配对失败</string>
    <string name="actMain_msg_pair_pwd_error">配对密码必须为4位数字</string>
    <string name="actMain_menu_rescan">重新扫描</string>
    <string name="actDiscovery_name">扫描设备</string>
    <string name="actDiscovery_msg_select_device">选择需要连接的设备</string>
    <string name="actDiscovery_msg_not_find_device">未找到蓝牙设备</string>
    <string name="actDiscovery_msg_scaning_device">扫描中&#8230;</string>
    <string name="actDiscovery_msg_starting_device">蓝牙设备启动中&#8230;</string>
    <string name="actDiscovery_msg_start_bluetooth_fail">蓝牙启动失败</string>
    <string name="actDiscovery_msg_bluetooth_not_start">蓝牙未开启</string>
    <string name="actDiscovery_menu_scan">扫描</string>
    <string name="actDiscovery_bond_bonded">已绑定</string>
    <string name="actDiscovery_bond_nothing">未绑定</string>
    <string name="actByteStream_name">字节流模式</string>
    <string name="actByteStream_input_hint">输入待发送的数据</string>
    <string name="actByteStream_btn_send_desc">发送按钮</string>
    <string name="actByteStream_tv_receive_text">数据接收区</string>
    <string name="actCmdLine_name">命令行模式</string>
    <string name="actCmdLine_input_hint">输入指令字符(按发送按钮)</string>
    <string name="actCmdLine_msg_helper">当前结束符为 %1$s，请在指令行中输完指令后，点击按软键盘的[发送]即完成发送操作；\n\n如果需要更换指令结束符请选择菜单中的【设置结束符】进行设定；\n\n</string>
    <string name="actCmdLine_dialog_title_end_flg">设置命令结束符</string>
    <string name="actCmdLine_et_hint_end_flg_val">指令结束符(HEX格式)</string>
    <string name="actKeyBoard_name">键盘模式</string>
    <string name="mode_control_equipment">数据交互</string>
    <string name="actKeyBoard_tv_Init">点击对应的按钮，发送当前按钮中设定的指令。需要设置按钮的属性，可选择菜单中的【配置键盘值】。\n</string>
    <string name="actKeyBoard_tv_set_btnname">显示名</string>
    <string name="actKeyBoard_tv_set_btnname_hint">按钮的显示名字</string>
    <string name="actKeyBoard_tv_long_pass_freq_hint">单位ms，必须>%1$d</string>
    <string name="actKeyBoard_set_btn_down_send_value">按下发送值</string>
    <string name="actKeyBoard_set_btn_hold_send_value">长按发送值</string>
    <string name="actKeyBoard_set_btn_up_send_value">释放发送值</string>
    <string name="actKeyBoard_set_send_value_hint">发送的内容</string>
    <string name="actKeyBoard_tv_set_keyboard_helper">当前为键盘设置模式，请点击按钮区中的按钮，设置每个按钮的属性。\n完成设置后点击菜单的【保存键盘配置】回到发送模式。\n</string>
    <string name="actKeyBoard_msg_helper_endflg">当前结束符为 %1$s，如果需要更换指令结束符请选择菜单中的【设置结束符】进行设定；\n</string>
    <string name="actKeyBoard_msg_repeat_freq_set">当前按钮长按时的触发频率为 %1$dms；</string>
    <string name="actAbout_name">关于</string>
    <string name="dialog_title_sys_err">系统错误</string>
    <string name="dialog_title_alert">警告</string>
    <string name="dialog_title_io_mode_set">IO字符模式设置</string>
    <string name="dialog_title_end_flg">终止符设置</string>
    <string name="dialog_title_keyboard_set">按钮功能设置</string>
    <string name="dialog_title_keyboard_long_pass_frea">长按时重复频率(ms)</string>
    <string name="dialog_io_mode_input_set">接收显示模式设置</string>
    <string name="dialog_io_mode_output_set">发送字符模式设置</string>
    <string name="dialog_io_mode_ascii">ASCII字符串</string>
    <string name="dialog_io_mode_hex">HEX字符串</string>
    <string name="dialog_end_flg_select">选择终止符模板:</string>
    <string name="dialog_end_flg_rn">char(\'\\r\\n\')</string>
    <string name="dialog_end_flg_n">char(\'\\n\')</string>
    <string name="dialog_end_flg_other">其他</string>
    <string name="dialog_end_flg_hex_val">终止符的HEX进制值:</string>
    <string name="btn_ok">确定</string>
    <string name="btn_click_me">点我</string>
    <string name="tv_send_area_title">发送区</string>
    <string name="tv_receive_area_title">接收区</string>
    <string name="menu_close">关闭</string>
    <string name="menu_clear">清屏</string>
    <string name="menu_io_mode">设定IO模式</string>
    <string name="menu_save_to_file">保存到文件</string>
    <string name="menu_clear_cmd_history">清除历史命令</string>
    <string name="menu_set_stop_flg">设置结束符</string>
    <string name="menu_helper">使用向导</string>
    <string name="menu_set_key_board_start">配置键盘值</string>
    <string name="menu_set_key_board_end">保存键盘配置</string>
    <string name="menu_set_key_board_event">按钮激发模式</string>
    <string name="menu_set_button_long_pass_freq">设定长按发送频率</string>
    <string name="menu_about">关于</string>
    <string name="device_type_bredr">BR/EDR Bluetooth</string>
    <string name="device_type_ble">Low Energy Bluetooth</string>
    <string name="device_type_dumo">Duplex mode Bluetooth</string>
    <string name="templet_txd">Txd: %1$dB</string>
    <string name="templet_rxd">Rxd: %1$dB</string>
    <string name="templet_hold_time">Running: %1$ds</string>
    <string name="msg_send_data_fail">数据发送失败</string>
    <string name="msg_not_hex_string">无效的HEX字符串</string>
    <string name="msg_save_file_fail">文件保存失败</string>
    <string name="msg_receive_data_wating">等待接收数据中&#8230;\n</string>
    <string name="msg_receive_data_stop">数据接收终止</string>
    <string name="msg_msg_bt_connect_lost">蓝牙设备的通信连接丢失，请尝试重新连接</string>
    <string name="msg_helper_endflg_nothing">当前未设置结束符，如果需要更换指令结束符请选择菜单中的【设置结束符】进行设定；\n</string>
    <string name="tips_click_to_hide">点击后隐藏</string>
    <string name="tips_click_to_show">点击后显示</string>


    <string name="control_ignite_fid">点燃FID</string>
    <string name="control_pump_on">启动泵</string>
    <string name="control_pump_off">停止泵</string>
    <string name="control_reboot">退出</string>
    <string name="control_detector_fid">FID</string>
    <string name="control_detector_pid">PID</string>


    <string name="menu_import_task">导入检测任务</string>
    <string name="menu_import_repeat_task">导入复检任务</string>

    <string name="menu_task">检测任务</string>
    <string name="menu_repeat_task">复检任务</string>

    <string name="menu_scan">扫描</string>

    <string name="nav_setting">设置</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>